--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 /node_modules
 /public/build
 /public/hot
+/public/storage
+/storage/*.key
 /vendor
 .env
 .env.backup
@@ -15,3 +17,4 @@ yarn-error.log
 /.fleet
 /.idea
 /.vscode
+/public/images
